--- a/.dvc/config
+++ b/.dvc/config
@@ -1,4 +1,6 @@
 [core]
-    remote = storage
-['remote "storage"']
-    url = https://remote.dvc.org/get-started
+['remote "production"']
+    url = s3://dvc-temp/ivan/test-multiple-remotes
+['remote "sandbox"']
+    url = s3://dvc-sandbox-temp/ivan/test-multiple-remotes
+
